# HIVEE-HUB

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
docs/: ARCHITECTURE.md  HIVEE_CLOUD_EXPECTATIONS.md  HOSTINGER_OPENCLAW.md  RUNBOOK.md
hivee_hub/: cli.py  cloud_api.py  config.py  service.py
hivee_hub/runtime/: __init__.py  base.py  openclaw.py
public/: app.js  index.html  styles.css
src/: index.ts  server.ts
src/config/: env.ts
src/routes/: api.ts  wsBridge.ts
src/services/: cloudApi.ts  cloudSocket.ts  connectionRegistry.ts  connectorManager.ts  dockerDiscovery.ts  openclawClient.ts  runtime.ts
src/store/: migrations.ts  repository.ts  runtimeEnv.ts
src/types/: domain.ts
tests/: connectionRegistry.test.ts
