[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hivee-hub"
version = "0.1.0"
description = "Hivee Hub daemon for connection registration, heartbeat, and runtime agent discovery"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hivee" }
]
dependencies = [
  "httpx>=0.27,<1"
]

[project.scripts]
hivee-hub = "hivee_hub.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hivee_hub*"]